--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Vraag 1" />
+                android:text="Question 1" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:text="What is the name of The Netherlands in dutch?"
+                android:text="What comes after Sunday?"
                 android:textColor="@android:color/black" />
 
             <EditText
@@ -62,22 +62,38 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Vraag 2" />
+                android:text="Question 2" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:text="What is the name of The Netherlands in dutch?"
+                android:text="1 + 1 = 2?"
                 android:textColor="@android:color/black" />
 
-            <EditText
-                android:id="@+id/answerText2"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Put your awnser here"
-                android:textSize="12sp" />
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/yes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Yes"
+                    android:onClick="checkboxYes"
+                    android:textSize="12sp" />
+
+                <CheckBox
+                    android:id="@+id/no"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="No"
+                    android:onClick="checkboxNo"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/answerButton2"
@@ -97,22 +113,46 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Vraag 3" />
+                android:text="Question 3" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:text="What is the name of The Netherlands in dutch?"
+                android:text="What is the letter C?"
                 android:textColor="@android:color/black" />
 
-            <EditText
-                android:id="@+id/answerText3"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Put your awnser here"
-                android:textSize="12sp" />
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/a" />
+
+                <ImageView
+                    android:id="@+id/image2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/b" />
+
+                <ImageView
+                    android:id="@+id/image3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/c" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/answerButton3"
